2009-12-25  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        Implement HTML5 section element.
        https://bugs.webkit.org/show_bug.cgi?id=32936

        <section> should behave the same as <nav>.

        Test: fast/html/section-element.html

        * css/html.css: Add section as a block element.
        * editing/htmlediting.cpp:
        (WebCore::validBlockTag): Add sectionTag.
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::tagPriority): Returns 5 for sectionTag.
        (WebCore::blockTagList): Add sectionTag.
        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::getNode): Add sectionTag.
        * html/HTMLTagNames.in: Add section.

2009-12-25  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Implement HTML5 section element.
        https://bugs.webkit.org/show_bug.cgi?id=32936

        The new test file tests:
        - <p> closing,
        - Residual style, and
        - FormatBlock.

        * fast/html/script-tests/TEMPLATE.html: Added.
        * fast/html/script-tests/section-element.js: Added.
        * fast/html/section-element-expected.txt: Added.
        * fast/html/section-element.html: Added.

Canonical link: https://commits.webkit.org/43977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52564 268f45cc-cd09-0410-ab3c-d52691b4dbfc